--- a/src/app/main-page/components/albums-menu/albums-menu.component.html
+++ b/src/app/main-page/components/albums-menu/albums-menu.component.html
@@ -4,8 +4,11 @@
   </div>
   <div class="title">
     <h3>
-      Magos, espadas y rosas y magos y espadas y rosas y de nuevo rosas y de
-      nuevo magos y mucho magos<br /><span style="font-size: 12px">2023</span>
+      Magos, espadas y rosas y magos y espadas<br /><span
+        style="font-size: 12px"
+        >2023
+      </span>
+      <span style="font-size: 12px"> | 8 canciones</span>
     </h3>
   </div>
   <div class="circle" [ngClass]="{ finished: isFinished }"></div>
