--- a/src/app/main-page/components/albums-menu/albums-menu.component.scss
+++ b/src/app/main-page/components/albums-menu/albums-menu.component.scss
@@ -13,7 +13,7 @@
     position: absolute;
     background-color: var(--red);
     top: 0;
-    right: 20px;
+    right: 25px;
     margin: 10px;
   }
   .finished {
@@ -32,7 +32,7 @@
     max-width: 250px;
   }
   h3 {
-    padding: 9px 10px;
+    padding: 9px 10px 0px 10px;
     font-size: 18px;
     font-weight: 500;
     color: #fff;
