--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,17 +1,22 @@
-main {
-  height: 100%;
+.main {
+  height: 100vh;
+  overflow-y: none;
   width: 100%;
   display: flex;
   .left_section {
     height: 100%;
-  }
-  section:nth-child(1) {
-    flex-basis: 30%;
     border-right: 1px solid var(--secondary-white);
-    height: 100vh;
   }
-  section:nth-child(2) {
-    flex-basis: 70%;
-    height: 100vh;
+  .right_section {
+    height: 100%;
+  }
+  :nth-child(1) {
+    flex-basis: 412px;
+
+    height: 100%;
+  }
+  :nth-child(2) {
+    flex-grow: 1;
+    height: 100%;
   }
 }
