--- a/src/app/main-page/sections/left-section/left-section.component.scss
+++ b/src/app/main-page/sections/left-section/left-section.component.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-flow: column nowrap;
   height: 100%;
+
   .logo {
-    width: 412px;
+    width: 100%;
     height: 170px;
     display: flex;
     justify-content: center;
@@ -17,7 +18,6 @@
     border-bottom: 1px solid var(--secondary-white);
     h2 {
       padding: 2px 12px;
-      user-select: none;
     }
     button {
       font-size: 14px;
@@ -42,6 +42,7 @@
   button {
     width: 100%;
     opacity: 0.6;
+    transition: 0.2s ease-in-out;
     &:hover {
       cursor: default;
       opacity: 1;
