--- a/src/app/main-page/components/top-album/top-album.component.html
+++ b/src/app/main-page/components/top-album/top-album.component.html
@@ -14,5 +14,10 @@
       </p>
     </div>
   </div>
-  <button type="button" class="menu">|||</button>
+  <app-menu></app-menu>
+</div>
+<div class="blocker" *ngIf="popupComponent">
+  <div class="popup">
+    <app-album-popup></app-album-popup>
+  </div>
 </div>
