--- a/src/app/main-page/components/album-page/album-page.component.scss
+++ b/src/app/main-page/components/album-page/album-page.component.scss
@@ -1,6 +1,6 @@
 .principal {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-flow: column;
   section {
@@ -8,9 +8,9 @@
     height: 100%;
   }
   :nth-child(1) {
-    flex-basis: 35%;
+    flex-basis: 343px;
   }
   :nth-child(2) {
-    flex-basis: 65%;
+    flex-basis: 1;
   }
 }
