--- a/src/app/main-page/components/bot-album/bot-album.component.scss
+++ b/src/app/main-page/components/bot-album/bot-album.component.scss
@@ -2,7 +2,7 @@
   padding-top: 3px;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  max-height: 675px;
   .top-bar {
     margin-bottom: 4px;
   }
@@ -10,7 +10,6 @@
   .item {
     padding: 3px 0;
 
-    overflow: hidden;
     width: 100%;
     display: flex;
     flex-flow: row nowrap;
@@ -112,4 +111,54 @@
       }
     }
   }
+}
+.blocker {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+  .popup {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100000;
+  }
+}
+.items_list {
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+.items_list::-webkit-scrollbar {
+  width: 14px;
+  opacity: 0.7;
+  &:hover {
+    opacity: 1;
+  }
+}
+.items_list::-webkit-scrollbar-corner {
+  background: rgba(0, 0, 0, 0);
+}
+.items_list::-webkit-scrollbar-thumb {
+  opacity: 0.7;
+  &:hover {
+    opacity: 1;
+  }
+  background-color: var(--secondary-white);
+  border-radius: 6px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: content-box;
+  min-width: 18px;
+  min-height: 18px;
+}
+.items_list::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0);
+}
+.select {
+  user-select: all;
 }
