--- a/src/app/main-page/components/top-album/top-album.component.scss
+++ b/src/app/main-page/components/top-album/top-album.component.scss
@@ -45,3 +45,20 @@
     }
   }
 }
+.blocker {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+  .popup {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100000;
+  }
+}
