--- a/src/app/main-page/components/item-list/item-list.component.html
+++ b/src/app/main-page/components/item-list/item-list.component.html
@@ -1,10 +1,10 @@
-<div class="item">
+<button class="item">
   <div class="name flex">
     <div class="item_img">
       <div class="img"></div>
     </div>
     <div class="item_name">
-      <p>Cancion generico 1, muy generica</p>
+      <p>Hasta a ti</p>
     </div>
   </div>
 
@@ -15,12 +15,12 @@
     <p>17/08/2023</p>
   </div>
   <div class="duration item_duration">
-    <p>1:00:00</p>
+    <p>3:42</p>
   </div>
   <div class="version item_duration">
-    <p>1</p>
+    <p>1.0.2</p>
   </div>
   <div class="ubication item_ubication">
-    <p>"...rica_1_muy_generica"</p>
+    <p>".../music/Hasta a ti"</p>
   </div>
-</div>
+</button>
