--- a/src/app/main-page/components/item-list/item-list.component.scss
+++ b/src/app/main-page/components/item-list/item-list.component.scss
@@ -7,6 +7,12 @@
   align-items: center;
   opacity: 0.8;
   &:hover {
+    cursor: default;
+    opacity: 1;
+    background-color: rgba($color: #000000, $alpha: 0.3);
+  }
+  &:focus {
+    background-color: rgba($color: #000000, $alpha: 0.5);
     opacity: 1;
   }
   div {
