--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,6 @@
 * {
   margin: 0;
   padding: 0;
-  user-select: none;
 }
 
 body {
@@ -23,4 +22,14 @@ button {
   &:hover {
     cursor: pointer;
   }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  user-select: none;
 }
