--- a/src/app/main-page/sections/left-section/left-section.component.scss
+++ b/src/app/main-page/sections/left-section/left-section.component.scss
@@ -75,3 +75,25 @@
 .albums_container::-webkit-scrollbar-track {
   background-color: rgba(0, 0, 0, 0);
 }
+
+.blocker {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+}
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 882px;
+  height: 364px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100000;
+}
