--- a/src/app/main-page/components/bot-album/bot-album.component.scss
+++ b/src/app/main-page/components/bot-album/bot-album.component.scss
@@ -120,15 +120,20 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 100;
-  .popup {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 100000;
-  }
 }
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 882px;
+  height: 364px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100000;
+}
+
 .items_list {
   height: 100%;
   overflow-y: auto;
