--- a/src/app/main-page/components/top-album/menu/menu.component.scss
+++ b/src/app/main-page/components/top-album/menu/menu.component.scss
@@ -34,3 +34,23 @@
     }
   }
 }
+.blocker {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+}
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 190px;
+  width: 882px;
+  height: 364px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100000;
+}
